fix: adjust font weights and sizes for improved readability in add-task forms

--- a/member/css/add-task/add-task-components.css
+++ b/member/css/add-task/add-task-components.css
@@ -116,7 +116,6 @@
   height: 48px;
   border-radius: 10px;
   padding: 0 20px;
-  font-weight: 600;
   gap: 5px;
   margin-top: 12px;
 
@@ -126,6 +125,7 @@
   background: var(--color-background-input);
   border: 1px solid var(--color-menu-bg);
   color: var(--color-menu-bg);
+  font-weight: 400;
 }
 
 .add-task__button--secondary:hover {
@@ -150,6 +150,8 @@
   background: var(--color-menu-bg);
   border: 1px solid var(--color-menu-bg);
   color: var(--color-text-button);
+  font-weight: 700;
+  font-size: 21px;
 }
 
 .add-task__button img {
@@ -223,7 +225,7 @@
   visibility: visible;
 }
 
-.add-task__overlay-bg{
+.add-task__overlay-bg {
   overflow-y: auto;
   overflow-x: clip;
   padding-right: 5px;
